# advent-of-code-2024

./: Makefile  README.md  pyproject.toml
01/: main.py  test_main.py  utils.py
02/: main.py  test_main.py  utils.py
03/: main.py  test_main.py  utils.py
04/: example_1.txt  main.py  test_main.py
05/: main.py  test_main.py  utils.py
06/: main.py  test_main.py  utils.py
07/: main.py  test_main.py  utils.py
08/: main.py  test_main.py
09/: main.py  test_main.py  utils.py
10/: main.py  test_main.py  utils.py
11/: main.py  test_main.py  utils.py
12/: main.py  test_main.py  utils.py
13/: main.py  test_main.py  utils.py
14/: main.py  test_main.py  utils.py
16/: main.py  test_main.py  utils.py
17/: main.py  test_main.py  utils.py
18/: main.py  test_main.py  utils.py
19/: main.py  test_main.py  utils.py
baseline/: main.py  test_main.py  utils.py
